[package]
name = "sub-account-custom-script"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule = { version = "0.7", default-features = false }
ckb-std = "0.9.0"
blake2b-ref = "0.3"
hex = { version = "0.4.3", default-features = false }
